tests/ui/attributes/export/mangling-version.stderr
error: `#[export]` attribute is only usable with `v0` mangling scheme
  --> $DIR/mangling-version.rs:7:1
   |
LL | pub extern "C" fn foo() -> i32 { 0 }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

